--- a/.github/workflows/deploy-kub.yaml
+++ b/.github/workflows/deploy-kub.yaml
@@ -49,7 +49,7 @@ jobs:
     # # helper for authentication
     - run: |-
         gcloud --quiet auth configure-docker
-    # gcloud --quiet auth configure-docker europe-west1-docker.pkg.dev
+        gcloud --quiet auth configure-docker europe-west1-docker.pkg.dev
 
   # # Get the GKE credentials so we can deploy to the cluster
   #   - uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
