--- a/.github/workflows/deploy-kub.yaml
+++ b/.github/workflows/deploy-kub.yaml
@@ -48,9 +48,9 @@ jobs:
 
         # # Configure Docker to use the gcloud command-line tool as a credential
     # # helper for authentication
-    - run: |-
-        gcloud --quiet auth configure-docker
-        gcloud --quiet auth configure-docker europe-west1-docker.pkg.dev
+    # - run: |-
+    #     gcloud --quiet auth configure-docker
+    #     gcloud --quiet auth configure-docker europe-west1-docker.pkg.dev
 
   # # Get the GKE credentials so we can deploy to the cluster
   #   - uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
