--- a/.github/workflows/deploy-kub.yaml
+++ b/.github/workflows/deploy-kub.yaml
@@ -41,9 +41,11 @@ jobs:
       id: 'auth'
       uses: 'google-github-actions/auth@v1'
       with:
-        workload_identity_provider: 'principalSet://iam.googleapis.com/projects/657990065782/locations/global/workloadIdentityPools/acount-test/*'
-          #{{ secrets.workload_identity_provider }}
-        service_account: 'github-account2@yefsah-hayet.iam.gserviceaccount.com'
+        workload_identity_provider: ${{ secrets.workload_identity_provider }}
+          #'principalSet://iam.googleapis.com/projects/657990065782/locations/global/workloadIdentityPools/acount-test/*'
+          #
+        service_account: ${{ secrets.service_account }}
+          #'github-account2@yefsah-hayet.iam.gserviceaccount.com'
           #{{ secrets.service_account }}
 
         # # Configure Docker to use the gcloud command-line tool as a credential
@@ -68,6 +70,7 @@ jobs:
     - name: push to gcr
       uses: RafikFarhad/push-to-gcr-github-action@v5-beta
       with:
+        gcloud_service_key: ${{ secrets.GCLOUD_SERVICE_KEY }}
         registry: europe-west1-docker.pkg.dev
         project_id: yefsah-hayet
         image_name: repo/app_flask
