--- a/.github/workflows/deploy-kub.yaml
+++ b/.github/workflows/deploy-kub.yaml
@@ -37,16 +37,16 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    # - name: 'Google auth'
-    #   id: 'auth'
-    #   uses: 'google-github-actions/auth@v1'
-    #   with:
-    #     workload_identity_provider: ${{ secrets.workload_identity_provider }}
-    #       #'principalSet://iam.googleapis.com/projects/657990065782/locations/global/workloadIdentityPools/acount-test/*'
-    #       #
-    #     service_account: ${{ secrets.service_account }}
-    #       #'github-account2@yefsah-hayet.iam.gserviceaccount.com'
-    #       #{{ secrets.service_account }}
+    - name: 'Google auth'
+      id: 'auth'
+      uses: 'google-github-actions/auth@v1'
+      with:
+        workload_identity_provider: ${{ secrets.workload_identity_provider }}
+          #'principalSet://iam.googleapis.com/projects/657990065782/locations/global/workloadIdentityPools/acount-test/*'
+          #
+        service_account: ${{ secrets.service_account }}
+          #'github-account2@yefsah-hayet.iam.gserviceaccount.com'
+          #{{ secrets.service_account }}
 
         # # Configure Docker to use the gcloud command-line tool as a credential
     # # helper for authentication
