--- a/.github/workflows/deploy-kub.yaml
+++ b/.github/workflows/deploy-kub.yaml
@@ -50,8 +50,8 @@ jobs:
 
         # # Configure Docker to use the gcloud command-line tool as a credential
     # # helper for authentication
-    # - run: |-
-    #     gcloud --quiet auth configure-docker
+    - run: |-
+        gcloud --quiet auth configure-docker
     #     gcloud --quiet auth configure-docker europe-west1-docker.pkg.dev
 
   # # Get the GKE credentials so we can deploy to the cluster
