--- a/.github/workflows/deploy-kub.yaml
+++ b/.github/workflows/deploy-kub.yaml
@@ -54,6 +54,16 @@ jobs:
         gcloud --quiet auth configure-docker
     #     gcloud --quiet auth configure-docker europe-west1-docker.pkg.dev
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        file: ./Dockerfile.main
+        push: true
+        tags: europe-west1-docker.pkg.dev/yefsah-hayet/repo/flux:latest
+
   # # Get the GKE credentials so we can deploy to the cluster
   #   - uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
   #     with:
@@ -67,16 +77,16 @@ jobs:
     #     service_account_key: {{ secrets.GKE_SA_KEY }}
     #     project_id: {{ secrets.GKE_PROJECT }}
 
-    - name: push to gcr
-      uses: RafikFarhad/push-to-gcr-github-action@v5-beta
-      with:
-        gcloud_service_key: ${{ secrets.GCLOUD_SERVICE_KEY }}
-        registry: eu.gcr.io
-        project_id: yefsah-hayet
-        image_name: repo/app_flask
-        image_tag: ${{github.sha}}
-        dockerfile: ./Dockerfile.main
-        context: .
+    # - name: push to gcr
+    #   uses: RafikFarhad/push-to-gcr-github-action@v5-beta
+    #   with:
+    #     gcloud_service_key: ${{ secrets.GCLOUD_SERVICE_KEY }}
+    #     registry: eu.gcr.io
+    #     project_id: yefsah-hayet
+    #     image_name: repo/app_flask
+    #     image_tag: ${{github.sha}}
+    #     dockerfile: ./Dockerfile.main
+    #     context: .
 
 
     # # Configure Docker to use the gcloud command-line tool as a credential
