--- a/.github/workflows/deploy-kub.yaml
+++ b/.github/workflows/deploy-kub.yaml
@@ -52,7 +52,7 @@ jobs:
     # # helper for authentication
     - run: |-
         gcloud --quiet auth configure-docker
-    #     gcloud --quiet auth configure-docker europe-west1-docker.pkg.dev
+        gcloud --quiet auth configure-docker europe-west1-docker.pkg.dev
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
