--- a/.github/workflows/deploy-kub.yaml
+++ b/.github/workflows/deploy-kub.yaml
@@ -56,6 +56,13 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
+    - name: Login to GHCR
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: yefsah-hayet
+        password: ${{ secrets.GCLOUD_SERVICE_KEY }}
+
     - name: Build and push
       uses: docker/build-push-action@v4
       with:
@@ -80,11 +87,11 @@ jobs:
     # - name: push to gcr
     #   uses: RafikFarhad/push-to-gcr-github-action@v5-beta
     #   with:
-    #     gcloud_service_key: ${{ secrets.GCLOUD_SERVICE_KEY }}
+    #     gcloud_service_key: {{ secrets.GCLOUD_SERVICE_KEY }}
     #     registry: eu.gcr.io
     #     project_id: yefsah-hayet
     #     image_name: repo/app_flask
-    #     image_tag: ${{github.sha}}
+    #     image_tag: {{github.sha}}
     #     dockerfile: ./Dockerfile.main
     #     context: .
 
