--- a/.github/workflows/deploy-kub.yaml
+++ b/.github/workflows/deploy-kub.yaml
@@ -59,7 +59,7 @@ jobs:
     - name: Login to GHCR
       uses: docker/login-action@v2
       with:
-        registry: ghcr.io
+        registry: europe-west1-docker.pkg.dev
         username: yefsah-hayet
         password: ${{ secrets.GCLOUD_SERVICE_KEY }}
 
