--- a/.github/workflows/deploy-kub.yaml
+++ b/.github/workflows/deploy-kub.yaml
@@ -52,16 +52,16 @@ jobs:
     # # helper for authentication
     - run: |-
         gcloud --quiet auth configure-docker
-        gcloud --quiet auth configure-docker europe-west1-docker.pkg.dev
+        gcloud auth configure-docker europe-west1-docker.pkg.dev
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
-    - name: Login to GHCR
-      uses: docker/login-action@v1
-      with:
-        registry: europe-west1-docker.pkg.dev
-        username: yefsah-hayet
-        password: ${{ secrets.GCLOUD_SERVICE_KEY }}
+    # - name: Login to GHCR
+    #   uses: docker/login-action@v1
+    #   with:
+    #     registry: europe-west1-docker.pkg.dev
+    #     username: yefsah-hayet
+    #     password: {{ secrets.GCLOUD_SERVICE_KEY }}
 
     - name: Build and push
       uses: docker/build-push-action@v4
