--- a/.github/workflows/kub_2-deploy.yaml
+++ b/.github/workflows/kub_2-deploy.yaml
@@ -42,6 +42,8 @@ jobs:
         create_credentials_file: 'true'
         workload_identity_provider: '${{ secrets.workload_identity_provider }}'
         service_account: '${{ secrets.service_account }}'
+    - name: auth
+      run: gcloud config set ${{ secrets.service_account }}
 
 #     - name: 'SSH to GCP instance'
 #       id: 'ssh'
