--- a/.github/workflows/kub_2-deploy.yaml
+++ b/.github/workflows/kub_2-deploy.yaml
@@ -43,20 +43,6 @@ jobs:
         workload_identity_provider: '${{ secrets.workload_identity_provider }}'
         service_account: '${{ secrets.service_account }}'
 
-#     - name: 'SSH to GCP instance'
-#       id: 'ssh'
-#       uses: 'google-github-actions/ssh-compute@v0'
-#       with:
-#         instance_name: 'instance-poei'
-#         zone: '${{ env.ZONE }}'
-#         ssh_private_key: '${{ secrets.VM_PRIVATE_KEY }}'
-#         script: '${{ github.workspace }}/deploy_detail/deploy.sh'
-
-#     - name: 'Show Output'
-#       run: |-
-#         echo '${{ steps.ssh.outputs.stdout }}'
-#         echo '${{ steps.ssh.outputs.stderr }}'
-
     - name: push to gcr
       uses: RafikFarhad/push-to-gcr-github-action@v5-beta
       with:
@@ -67,10 +53,15 @@ jobs:
         dockerfile: ./Dockerfile.main
         context: .
 
-    # - name: create template instance
-    #   run: |
-    #     gcloud compute instance-templates create-with-container ${{github.sha}} --container-image europe-west1-docker.pkg.dev/bailleul-charles/google-repo/app-flask:${{github.sha}} --network-interface network=management,subnet=managementsubnet --region europe-west1
-    #     gcloud compute instance-groups managed rolling-action start-update instance-group-1 --version=template=${{github.sha}}
+    - name: Set up Kustomize
+      run: |-
+        curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
+        chmod u+x ./kustomize
 
+  # Deploy the Docker image to the GKE cluster
+    - name: Deploy
+      run: |-
+        ./kustomize edit set image europe-west1-docker.pkg.dev/yefsah-hayet/repo:$GITHUB_SHA
+        ./kustomize build ./manifest.yaml | kubectl apply -f -
 
 
