--- a/.github/workflows/kub_2-deploy.yaml
+++ b/.github/workflows/kub_2-deploy.yaml
@@ -58,10 +58,10 @@ jobs:
         curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
         chmod u+x ./kustomize
 
-  # Deploy the Docker image to the GKE cluster
-    - name: Deploy
-      run: |-
-        ./kustomize edit set image europe-west1-docker.pkg.dev/yefsah-hayet/repo:$GITHUB_SHA
-        ./kustomize build ./manifest.yaml | kubectl apply -f -
+  # # Deploy the Docker image to the GKE cluster
+  #   - name: Deploy
+  #     run: |-
+  #       ./kustomize edit set image europe-west1-docker.pkg.dev/yefsah-hayet/repo:$GITHUB_SHA
+  #       ./kustomize build ./manifest.yaml | kubectl apply -f -
 
 
