--- a/.github/workflows/kub_2-deploy.yaml
+++ b/.github/workflows/kub_2-deploy.yaml
@@ -53,6 +53,13 @@ jobs:
         dockerfile: ./Dockerfile.main
         context: .
 
+      # # Get the GKE credentials so we can deploy to the cluster
+    - uses: google-github-actions/get-gke-credentials@v0
+      with:
+        cluster_name: app-cluster
+        location: europe-west1
+        credentials: ${{ secrets.GCLOUD_SERVICE_KEY}}
+
     - name: Set up Kustomize
       run: |-
         curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
